<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_below="@+id/ll1"
        android:layout_above="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical"
                android:text="@string/Email_Id"
                android:textColor="@color/colorblue"
                android:textSize="18sp"
                android:textStyle="bold"

                />
            <EditText
                android:id="@+id/emailId_edit"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:maxLength="100"
                android:hint="@string/Hint_Email_Id"
                android:inputType="textEmailAddress"
                android:focusable="false"
                android:background="@drawable/rounded_border_edittext"
                android:paddingLeft="5dp"
                />
        <TextView
            android:id="@+id/office_name"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:text="@string/Office_Name"
            android:textColor="@color/colorblue"
            android:textSize="18sp"
            android:textStyle="bold"

            />
        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:maxLength="100"
            android:hint="@string/Hint_Office_Name"
            android:inputType="textPersonName"
            android:background="@drawable/rounded_border_edittext"
            android:paddingLeft="5dp"
            />
        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:text="@string/Contact"
            android:textColor="@color/colorblue"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/contact_edit"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/Hint_Contact"
            android:inputType="phone"
            android:maxLength="10"
            android:background="@drawable/rounded_border_edittext"
            android:paddingLeft="5dp"
            />
        <TextView
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/Owner_Name"
            android:textColor="@color/colorblue"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/owner_edit"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:maxLength="30"
            android:hint="@string/Hint_Owner_Name"
            android:inputType="textPersonName"
            android:background="@drawable/rounded_border_edittext"
            android:paddingLeft="5dp"
            />
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/Address"
            android:textColor="@color/colorblue"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:maxLength="250"
            android:hint="@string/Hint_Address"
            android:inputType="textPersonName"
            android:background="@drawable/rounded_border_edittext"
            android:paddingLeft="5dp"
            />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll3"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@color/colorblue"
            android:text="@string/Next"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</RelativeLayout>


</layout>