<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Personal.PersonalActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        >

    </include>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/Email_Id"
                android:textColor="@color/colorblue"
                android:textSize="18sp"
                android:textStyle="bold"
                 />

            <EditText
                android:id="@+id/emailId_edit"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/Hint_Email_Id"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_border_edittext"
                android:maxLength="100"
                android:paddingLeft="5dp"
                 />
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/Name"
        android:textColor="@color/colorblue"
        android:textSize="18sp"
        android:textStyle="bold"
         />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/Hint_Name"
                android:inputType="textPersonName"
                android:background="@drawable/rounded_border_edittext"
                android:maxLength="30"
                android:paddingLeft="5dp"
                 />

            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Contact"
                android:textColor="@color/colorblue"
                android:textSize="18sp"
                android:textStyle="bold"
                 />

    <EditText
        android:id="@+id/contact_edit"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Hint_Contact"
        android:maxLength="10"
        android:inputType="phone"
        android:background="@drawable/rounded_border_edittext"
        android:paddingLeft="5dp"
        />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/Address"
                android:textColor="@color/colorblue"
                android:textSize="18sp"
                android:textStyle="bold"
                 />

    <EditText
        android:id="@+id/address_edit"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Hint_Address"
        android:maxLength="250"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_border_edittext"
        android:paddingLeft="5dp"
        />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/next"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick"
       />
</RelativeLayout>
</layout>