<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/tool_bar"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_below="@+id/ll1"
            android:layout_above="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ScrollView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:fillViewport="true"
                >
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/expenseName"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:text="@string/Expense_Type_Name"
                        android:textColor="@color/colorblue"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />
                    <EditText
                        android:id="@+id/expenseName_edit"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:maxLength="50"
                        android:hint="@string/Hint_Expense_Type_Name"
                        android:inputType="textPersonName"
                        android:background="@drawable/rounded_border_edittext"
                        android:paddingLeft="5dp"
                        />
                    <TextView
                        android:id="@+id/frequency"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/Frequency"
                        android:textColor="@color/colorblue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <Spinner
                        android:id="@+id/frequency_edit"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:background="@android:drawable/btn_dropdown"
                        android:paddingLeft="5dp"
                        android:spinnerMode="dropdown"
                        />
                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/Default_Amount"
                        android:textColor="@color/colorblue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/amount_edit"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:maxLength="10"
                        android:hint="@string/Hint_Amount"
                        android:inputType="numberDecimal"
                        android:background="@drawable/rounded_border_edittext"
                        android:paddingLeft="5dp"
                        />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll3"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@color/colorblue"
                android:text="@string/Save"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </RelativeLayout>


</layout>