<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <include
            layout="@layout/tool_bar"
            android:id="@+id/toolbar"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/month"
                    android:text="@string/Month"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:id="@+id/rlMonth"
                    android:layout_below="@+id/month"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/calenderText"
                        android:layout_marginLeft="30dp"
                        android:paddingLeft="4dp"
                        android:layout_marginRight="10dp"
                        android:focusable="false"
                        android:onClick="onClick"
                        android:layout_toLeftOf="@+id/calenderBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"/>
                    <Button
                        android:id="@+id/calenderBtn"
                        android:background="@drawable/calender_2"
                        android:layout_alignParentRight="true"
                        android:onClick="onClick"
                        android:layout_width="30dp"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/rlMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/generateBtn"
                        android:onClick="onClick"
                        android:layout_marginTop="20dp"
                        android:text="@string/Generate"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/button_rounded"
                        android:layout_centerHorizontal="true"
                        android:layout_width="200dp"
                        android:layout_height="30dp" />
                    <Button
                        android:id="@+id/exportBtn"
                        android:text="@string/Export"
                        android:textColor="@color/colorPrimary"
                        android:onClick="onClick"
                        android:layout_below="@+id/generateBtn"
                        android:background="@drawable/button_rounded"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="200dp"
                        android:layout_height="30dp" />
                    <Button
                        android:id="@+id/exportMailBtn"
                        android:layout_below="@+id/exportBtn"
                        android:text="@string/Export_Mail"
                        android:textColor="@color/colorPrimary"
                        android:onClick="onClick"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/button_rounded"
                        android:layout_marginTop="10dp"
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"/>
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>
